kubeapp-ide/algorithm/flaskapp/algo-sentiment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: algo-sentiment-svc
  namespace: algorithm
  labels:
    app: algo-sentiment-svc
spec:
  selector: 
    app: algo-sentiment
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
